Mon Oct 01 15:23:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add a __len__() method for
	  SearchResults().
	* xappy/searchconnection_doctest1.txt,
	  xappy/searchconnection_doctest2.txt: Test it

Mon Oct 01 14:23:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add SearchConnection.query_multweight,
	  which produces a query from a subquery by multiplying the weights
	  by a multiplier.
	* xappy/indexerconnection_doctest2.txt: Modify test of "Cannot
	  specify both `allow` and `deny`" to expect new extended message.
	* xappy/searchconnection_doctest2.txt: Add test of a multweight
	  query.

Sun Sep 30 10:37:21 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Add "required_facets" parameter to get_suggested_facets(),
	  allowing certain facets to be required in the list of returned
	  facets.

Fri Sep 28 16:12:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/coverage.py: Update copy of coverage.py to latest
	  version (with patches applied) to get correct results with
	  python2.5

Mon Sep 24 14:21:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Add default_allow and default_deny parameters to query_parse.
	  These allow a list of field names to be specified which will be
	  searched by default (instead of searching all free-text fields).
	  Needs latest SVN version of xapian.

Sat Sep 22 09:21:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add 'rb' to another call to open that
	  I missed.

Thu Sep 20 15:20:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Start list of individuals who have contributed in any
	  way.

Tue Sep 18 13:23:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>
